[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Weapons/BouncyBomb_Proj.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 9.5

[node name="BouncyBomb_Proj" type="RigidBody2D" groups=["Projectile"]]
gravity_scale = 6.0
can_sleep = false
script = ExtResource( 1 )

[node name="BombGraphic" type="Polygon2D" parent="."]
position = Vector2( 0, -1 )
color = Color( 0.0705882, 0.105882, 0.384314, 1 )
polygon = PoolVector2Array( -3, 11, -8, 7, -10, 2, -9, -3, -7, -6, -2, -9, -2, -12, 2, -12, 2, -9, 7, -7, 9, -3, 10, 3, 8, 6, 6, 9, 3, 11 )

[node name="Fuse" type="Polygon2D" parent="BombGraphic"]
polygon = PoolVector2Array( -1, -12, -1, -15, -4, -19, -2, -21, 1, -16, 1, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionPolygon" type="CollisionPolygon2D" parent="DetectionArea"]
visible = false
polygon = PoolVector2Array( -30, -43, 17, -51, 42, -34, 53, 6, 34, 41, -2, 49, -35, 41, -49, 18, -51, -11 )

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="ExplosionPoly" type="CollisionPolygon2D" parent="ExplosionArea"]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
